complete sidebar admin

--- a/template/admin/admin.html
+++ b/template/admin/admin.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="admin.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <!-- Left -->
@@ -11,11 +19,51 @@
       <div class="left">
         <!-- Sidebar -->
         <!-- logo -->
-        <div class="logo"></div>
+        <div class="logo">
+          <img src="../images/logo.png" alt="logo" />
+          <span>Furni</span>
+        </div>
+        <!-- Divider -->
+        <hr class="solid" />
         <!-- list item -->
-        <div class="list-navbar"></div>
+        <div class="list-navbar">
+          <ul class="list-item">
+            <li class="item">
+              <i class="fa-solid fa-fan"></i>
+              Quản lý sản phẩm
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-layer-group"></i>
+              Quản lý danh mục
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-table-list"></i>
+              Quản lý người dùng
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-gift"></i>
+              Quản lý đơn hàng
+            </li>
+          </ul>
+        </div>
         <!-- profile -->
-        <div class="profile"></div>
+        <div class="profile">
+          <div class="avatar">
+            <img
+              src="https://png.pngtree.com/png-vector/20240724/ourlarge/pngtree-administrator-admin-avatar-png-image_12853673.png"
+              alt="avatar"
+            />
+          </div>
+          <p class="name">Emily Jonson</p>
+          <span class="email">emilyjonson@gmail.com</span>
+        </div>
+        <!-- logout -->
+        <ul class="list-item">
+          <li class="item">
+            <i class="fa-solid fa-right-from-bracket"></i>
+            Đăng xuất
+          </li>
+        </ul>
       </div>
       <!-- Right -->
       <div class="right">
