--- a/template/admin/admin.html
+++ b/template/admin/admin.html
@@ -68,7 +68,15 @@
       <!-- Right -->
       <div class="right">
         <!-- Navbar -->
-        <div class="navbar"></div>
+        <div class="navbar">
+          <!-- Search -->
+          <div class="input-search">
+            <input type="text" placeholder="Search" />
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+          <!-- date -->
+          <div class="date">Thứ 7, Ngày 2 tháng 11</div>
+        </div>
         <!-- Content -->
       </div>
     </div>
