--- a/template/admin/admin.css
+++ b/template/admin/admin.css
@@ -70,7 +70,7 @@ hr.solid {
   border-top: 3px solid #cad3da;
 }
 .list-navbar {
-  margin-top: 40px;
+  margin-top: 90px;
 }
 .list-item .item {
   list-style-type: none;
@@ -82,6 +82,11 @@ hr.solid {
   margin: 20px 0;
 }
 .list-item .item:hover {
+  background-color: #081225;
+  color: white;
+  border-radius: 24px;
+}
+.active {
   background-color: #081225;
   color: white;
   border-radius: 24px;
@@ -148,4 +153,31 @@ hr.solid {
 }
 .right .navbar .date {
   color: #9ca2aa;
+}
+.right .content {
+  height: 750px;
+  background-color: white;
+  margin-top: 20px;
+  border-radius: 16px;
+  padding: 20px;
+}
+.table-container {
+  margin-top: 40px;
+  max-height: 600px; /* Chiều cao tối đa cho vùng cuộn */
+  overflow-y: auto; /* Hiển thị thanh cuộn theo chiều dọc */
+  border: 1px solid #ccc; /* Đường viền cho vùng cuộn */
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+th,
+td {
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: justify;
+}
+th {
+  background-color: #f0f3f4;
+  font-weight: bold;
 }
