--- a/template/admin/admin.html
+++ b/template/admin/admin.html
@@ -14,8 +14,8 @@
     />
   </head>
   <body>
-    <!-- Left -->
     <div class="container">
+      <!-- Left -->
       <div class="left">
         <!-- Sidebar -->
         <!-- logo -->
@@ -28,7 +28,7 @@
         <!-- list item -->
         <div class="list-navbar">
           <ul class="list-item">
-            <li class="item">
+            <li class="item active">
               <i class="fa-solid fa-fan"></i>
               Quản lý sản phẩm
             </li>
@@ -70,15 +70,173 @@
         <!-- Navbar -->
         <div class="navbar">
           <!-- Search -->
-          <div class="input-search">
-            <input type="text" placeholder="Search" />
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </div>
-          <!-- date -->
-          <div class="date">Thứ 7, Ngày 2 tháng 11</div>
         </div>
         <!-- Content -->
+        <div class="content">
+          <h2 style="font-size: 30px; font-weight: bold">Quản lý sản phẩm</h2>
+          <div class="table-container">
+            <table>
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th style="width: 20%">Tên Sản Phẩm</th>
+                  <th>Danh Mục</th>
+                  <th>Giá</th>
+                  <th>Thương Hiệu</th>
+                  <th>Số Lượng</th>
+                  <th style="width: 30%">Mô Tả</th>
+                  <th>Thao tác</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Quạt làm mát hơi nước điều hòa Hawin HSN55 - 130w - Bản cơ
+                  </td>
+                  <td>Điện tử</td>
+                  <td>500,000 VNĐ</td>
+                  <td>Hawin</td>
+                  <td>10</td>
+                  <td>
+                    Phí lắp đặt quạt trần: 250.000-600.000 Phí lắp quạt trần
+                    đảo: 300.000 Phí lắp đặt quạt treo công nghiệp:
+                    70.000-150.000 Phí lắp đặt quạt treo gia đình : 50.000d -
+                    100.000d.
+                  </td>
+                  <td style="cursor: pointer">
+                    <i style="margin: 0 10px" class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pen"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Sản phẩm B</td>
+                  <td>Thời trang</td>
+                  <td>250,000 VNĐ</td>
+                  <td>Thương hiệu Y</td>
+                  <td>20</td>
+                  <td>Mô tả sản phẩm B.</td>
+                  <td style="cursor: pointer">
+                    <i style="margin: 0 10px" class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pen"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Sản phẩm B</td>
+                  <td>Thời trang</td>
+                  <td>250,000 VNĐ</td>
+                  <td>Thương hiệu Y</td>
+                  <td>20</td>
+                  <td>Mô tả sản phẩm B.</td>
+                  <td style="cursor: pointer">
+                    <i style="margin: 0 10px" class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pen"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Sản phẩm B</td>
+                  <td>Thời trang</td>
+                  <td>250,000 VNĐ</td>
+                  <td>Thương hiệu Y</td>
+                  <td>20</td>
+                  <td>Mô tả sản phẩm B.</td>
+                  <td style="cursor: pointer">
+                    <i style="margin: 0 10px" class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pen"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Quạt làm mát hơi nước điều hòa Hawin HSN55 - 130w - Bản cơ
+                  </td>
+                  <td>Điện tử</td>
+                  <td>500,000 VNĐ</td>
+                  <td>Hawin</td>
+                  <td>10</td>
+                  <td>
+                    Phí lắp đặt quạt trần: 250.000-600.000 Phí lắp quạt trần
+                    đảo: 300.000 Phí lắp đặt quạt treo công nghiệp:
+                    70.000-150.000 Phí lắp đặt quạt treo gia đình : 50.000d -
+                    100.000d.
+                  </td>
+                  <td style="cursor: pointer">
+                    <i style="margin: 0 10px" class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pen"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Quạt làm mát hơi nước điều hòa Hawin HSN55 - 130w - Bản cơ
+                  </td>
+                  <td>Điện tử</td>
+                  <td>500,000 VNĐ</td>
+                  <td>Hawin</td>
+                  <td>10</td>
+                  <td>
+                    Phí lắp đặt quạt trần: 250.000-600.000 Phí lắp quạt trần
+                    đảo: 300.000 Phí lắp đặt quạt treo công nghiệp:
+                    70.000-150.000 Phí lắp đặt quạt treo gia đình : 50.000d -
+                    100.000d.
+                  </td>
+                  <td style="cursor: pointer">
+                    <i style="margin: 0 10px" class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pen"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Quạt làm mát hơi nước điều hòa Hawin HSN55 - 130w - Bản cơ
+                  </td>
+                  <td>Điện tử</td>
+                  <td>500,000 VNĐ</td>
+                  <td>Hawin</td>
+                  <td>10</td>
+                  <td>
+                    Phí lắp đặt quạt trần: 250.000-600.000 Phí lắp quạt trần
+                    đảo: 300.000 Phí lắp đặt quạt treo công nghiệp:
+                    70.000-150.000 Phí lắp đặt quạt treo gia đình : 50.000d -
+                    100.000d.
+                  </td>
+                  <td style="cursor: pointer">
+                    <i style="margin: 0 10px" class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pen"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Quạt làm mát hơi nước điều hòa Hawin HSN55 - 130w - Bản cơ
+                  </td>
+                  <td>Điện tử</td>
+                  <td>500,000 VNĐ</td>
+                  <td>Hawin</td>
+                  <td>10</td>
+                  <td>
+                    Phí lắp đặt quạt trần: 250.000-600.000 Phí lắp quạt trần
+                    đảo: 300.000 Phí lắp đặt quạt treo công nghiệp:
+                    70.000-150.000 Phí lắp đặt quạt treo gia đình : 50.000d -
+                    100.000d.
+                  </td>
+                  <td style="cursor: pointer">
+                    <i style="margin: 0 10px" class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pen"></i>
+                  </td>
+                </tr>
+
+                <!-- Thêm nhiều hàng dữ liệu tại đây -->
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
     </div>
   </body>
+  <!-- <script src="common/sidebar.js"></script> -->
+  <script src="common/navbar.js"></script>
 </html>
