--- a/template/admin/admin.html
+++ b/template/admin/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="admin.css" />
+    <link rel="stylesheet" href="stylesheet/admin.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -30,19 +30,19 @@
           <ul class="list-item">
             <li class="item active">
               <i class="fa-solid fa-fan"></i>
-              Quản lý sản phẩm
+              <a style="color: white" href="#"> Quản lý sản phẩm</a>
             </li>
             <li class="item">
               <i class="fa-solid fa-layer-group"></i>
-              Quản lý danh mục
+              <a> Quản lý danh mục</a>
             </li>
             <li class="item">
               <i class="fa-solid fa-table-list"></i>
-              Quản lý người dùng
+              <a href="userManagement.html"> Quản lý người dùng</a>
             </li>
             <li class="item">
               <i class="fa-solid fa-gift"></i>
-              Quản lý đơn hàng
+              <a> Quản lý đơn hàng</a>
             </li>
           </ul>
         </div>
