--- a/template/admin/stylesheet/admin.css
+++ b/template/admin/stylesheet/admin.css
@@ -74,23 +74,34 @@ hr.solid {
 }
 .list-item .item {
   list-style-type: none;
-  padding: 15px 15px;
   font-size: 18px;
   cursor: pointer;
   display: flex;
+  align-items: center;
+  padding: 15px 15px;
   gap: 10px;
   margin: 20px 0;
+}
+.list-item .item a {
+  color: black;
+  display: block;
+  text-decoration: none;
+  width: 100%;
 }
 .list-item .item:hover {
   background-color: #081225;
   color: white;
   border-radius: 24px;
 }
-.active {
+.list-item .item:hover a {
+  color: white;
+}
+.list-item .item.active {
   background-color: #081225;
   color: white;
   border-radius: 24px;
 }
+
 .profile {
   display: flex;
   flex-direction: column;
