--- a/template/cart.html
+++ b/template/cart.html
@@ -74,6 +74,98 @@
 				</div>
 			</div>
 		<!-- End Hero Section -->
+		<!-----------------cart---------------------->
+		<section class="cart">
+			<div class = "container">
+				<div class = "cart-top">
+					<div class = cart-top-cart>
+						<i class="fa-solid fa-cart-shopping"></i>
+					</div>
+
+					<div class = cart-top-cart>
+						<i class="fa-solid fa-location-dot"></i>
+					</div>
+
+					<div class = cart-top-cart>
+						<i class="fa-light fa-money-check"></i>
+					</div>
+
+				</div>
+			</div>
+
+			<div class = "container">
+				<div class = "cart-content">
+					<div class = "cart-content-left">
+						<table>
+							<tr>
+								<th class="product-name">Ảnh</th>
+								<th class="product-name">Sản Phẩm</th>
+								<th class="product-price">Giá</th>
+								<th class="product-quantity">Số Lượng</th>
+								<th class="product-total">Tổng</th>
+							</tr>
+							<tr>
+								<td><img src="images/bag.svg" alt="">
+								<td><p>Sản phẩm 1</p></td>
+								<td><p>500.000<sub>VNĐ</sub></p></td>
+								<td><input type = "number" value="1" min="1"></td>
+								<td><span>x</span></td>
+
+
+							</tr>
+
+
+
+						</table>
+
+					</div>
+
+					<div class = "cart-content-right">
+						<table>
+							<tr>
+								<th colspan="2">TỔNG TIỀN GIỎ HÀNG</th>
+							</tr>
+
+							<tr>
+								<td>TỔNG SẢN PHẨM</td>
+								<td>2</td>
+							</tr>
+							<tr>
+								<td>TỔNG TIỀN HÀNG</td>
+								<td><p>500.000<sub>VNĐ</sub></p></td>
+							</tr>
+							<tr>
+								<td>THÀNH TIỀN</td>
+								<td><p style="color : black ; font-weight: bold">500.000<sub>VNĐ</sub></p></td>
+							</tr>
+
+						</table>
+						<div class="cart-content-right-text">
+							<p>Bạn sẽ được miễn phí ship khi đơn hàng có tổng giá trị trên 5.000.000</p>
+							<p style="color:red ; font-weight: bold">Mua thêm <span style="font-size: 18px">1.000.000</span> sẽ được miễn phí SHIP</p>
+						</div>
+
+						<div class = "cart-content-right-button">
+							<button>TIẾP TỤC MUA HÀNG</button>
+							<button>THANH TOÁN</button>
+						</div>
+
+						<div class="cart-content-right-login">
+							<p>TÀI KHOẢN TV</p>
+							<p>Hãy<a href="">Đăng nhập</a>tài khoản của bạn để tích điển thành viên</p>
+
+						</div>
+
+
+
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</section>
 
 		
 
@@ -112,12 +204,12 @@
                                 <button class="btn btn-outline-black increase" type="button">&plus;</button>
                               </div>
                             </div>
-        
+
                           </td>
                           <td>$49.00</td>
                           <td><a href="#" class="btn btn-black btn-sm">X</a></td>
                         </tr>
-        
+
                         <tr>
                           <td class="product-thumbnail">
                             <img src="images/product-2.png" alt="Image" class="img-fluid">
@@ -136,7 +228,7 @@
                                 <button class="btn btn-outline-black increase" type="button">&plus;</button>
                               </div>
                             </div>
-        
+
                           </td>
                           <td>$49.00</td>
                           <td><a href="#" class="btn btn-black btn-sm">X</a></td>
@@ -146,7 +238,7 @@
                   </div>
                 </form>
               </div>
-        
+
               <div class="row">
                 <div class="col-md-6">
                   <div class="row mb-5">
@@ -194,7 +286,7 @@
                           <strong class="text-black">$230.00</strong>
                         </div>
                       </div>
-        
+
                       <div class="row">
                         <div class="col-md-12">
                           <button class="btn btn-black btn-lg py-3 btn-block" onclick="window.location='checkout.html'">Proceed To Checkout</button>
@@ -206,7 +298,7 @@
               </div>
             </div>
           </div>
-		
+
 
 		<!-- Start Footer Section -->
 		<footer class="footer-section">
