--- a/template/index.html
+++ b/template/index.html
@@ -25,7 +25,6 @@
 	</head>
 
 	<body>
-
 		<!-- Start Header/Navigation -->
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
@@ -56,7 +55,16 @@
 			</div>
 				
 		</nav>
+
+
 		<!-- End Header/Navigation -->
+
+		<!------------Banner--------------------------->
+
+
+
+
+		<!------------ End Banner--------------------------->
 
 		<!-- Start Hero Section -->
 			<div class="hero">
