--- a/template/admin/userManagement.html
+++ b/template/admin/userManagement.html
@@ -4,8 +4,163 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="stylesheet/userManagement.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
   </head>
   <body>
-    Quản lý người dùng
+    <div class="container">
+      <!-- Left -->
+      <div class="left">
+        <!-- Sidebar -->
+        <!-- logo -->
+      </div>
+      <!-- Right -->
+      <div class="right">
+        <!-- Navbar -->
+        <div class="navbar">
+          <!-- Search -->
+        </div>
+        <!-- Content -->
+        <div class="content">
+          <h2 style="font-size: 30px; font-weight: bold; margin-bottom: 40px;">Quản lý người dùng</h2>
+          <div class="tablef-container">
+            <table>
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th style="width: 20%">Họ và tên</th>
+                  <th>Tên tài khoản</th>
+                  <th>Email</th>
+                  <th>Số điện thoại</th>
+                  <th>Ngày tháng năm sinh</th>
+                  <th style="width: 20%">Địa chỉ</th>
+                  <th>Thao tác</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Hoàng Nhựt Duy
+                  </td>
+                  <td>hoangnhutduy147</td>
+                  <td>nhutdny123@gmail.com</td>
+                  <td>0775869195</td>
+                  <td>03/04/2002</td>
+                  <td>
+                    4D Trần Thị Vững, An Bình, Dĩ An, Bình Dương 
+                  </td>
+                  <td style="cursor: pointer">
+                    <i style="margin: 0 10px" class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pen"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Hoàng Nhựt Duy
+                  </td>
+                  <td>hoangnhutduy147</td>
+                  <td>nhutdny123@gmail.com</td>
+                  <td>0775869195</td>
+                  <td>03/04/2002</td>
+                  <td>
+                    4D Trần Thị Vững, An Bình, Dĩ An, Bình Dương 
+                  </td>
+                  <td style="cursor: pointer">
+                    <i style="margin: 0 10px" class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pen"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Hoàng Nhựt Duy
+                  </td>
+                  <td>hoangnhutduy147</td>
+                  <td>nhutdny123@gmail.com</td>
+                  <td>0775869195</td>
+                  <td>03/04/2002</td>
+                  <td>
+                    4D Trần Thị Vững, An Bình, Dĩ An, Bình Dương 
+                  </td>
+                  <td style="cursor: pointer">
+                    <i style="margin: 0 10px" class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pen"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Hoàng Nhựt Duy
+                  </td>
+                  <td>hoangnhutduy147</td>
+                  <td>nhutdny123@gmail.com</td>
+                  <td>0775869195</td>
+                  <td>03/04/2002</td>
+                  <td>
+                    4D Trần Thị Vững, An Bình, Dĩ An, Bình Dương 
+                  </td>
+                  <td style="cursor: pointer">
+                    <i style="margin: 0 10px" class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pen"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Hoàng Nhựt Duy
+                  </td>
+                  <td>hoangnhutduy147</td>
+                  <td>nhutdny123@gmail.com</td>
+                  <td>0775869195</td>
+                  <td>03/04/2002</td>
+                  <td>
+                    4D Trần Thị Vững, An Bình, Dĩ An, Bình Dương 
+                  </td>
+                  <td style="cursor: pointer">
+                    <i style="margin: 0 10px" class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pen"></i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>
+                    Hoàng Nhựt Duy
+                  </td>
+                  <td>hoangnhutduy147</td>
+                  <td>nhutdny123@gmail.com</td>
+                  <td>0775869195</td>
+                  <td>03/04/2002</td>
+                  <td>
+                    4D Trần Thị Vững, An Bình, Dĩ An, Bình Dương 
+                  </td>
+                  <td style="cursor: pointer">
+                    <i style="margin: 0 10px" class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pen"></i>
+                  </td>
+                </tr>
+          
+               
+
+                <!-- Thêm nhiều hàng dữ liệu tại đây -->
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
   </body>
+  <script src="common/sidebar.js"></script>
+  <script src="common/navbar.js"></script>
+  <script type="module">
+    import activeElement from "./common/common.js"
+    const element = document.getElementById("item-user")
+    activeElement(element)
+  </script>
 </html>
