--- a/template/cart.html
+++ b/template/cart.html
@@ -22,7 +22,7 @@
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="css/tiny-slider.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
+		<title>Trang giỏ hàng</title>
 	</head>
 
 	<body>
@@ -55,7 +55,7 @@
 					</ul>
 				</div>
 			</div>
-				
+
 		</nav>
 		<!-- End Header/Navigation -->
 
@@ -69,7 +69,7 @@
 							</div>
 						</div>
 						<div class="col-lg-7">
-							
+
 						</div>
 					</div>
 				</div>
@@ -275,7 +275,7 @@
 
 			</div>
 		</footer>
-		<!-- End Footer Section -->	
+		<!-- End Footer Section -->
 
 
 		<script src="js/bootstrap.bundle.min.js"></script>
