--- a/template/delivery.html
+++ b/template/delivery.html
@@ -17,7 +17,7 @@
   <meta name="keywords" content="bootstrap, bootstrap4" />
 
   <!-- Bootstrap CSS -->
-  <link rel ="stylesheet" href="css/cart.css">
+  <link rel ="stylesheet" href="css/delivery.css">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link href="css/tiny-slider.css" rel="stylesheet">
@@ -74,28 +74,7 @@
     </div>
   </div>
 </div>
-<!-- End Hero Section -->
-<!-----------------cart---------------------->
-<section class="cart">
-  <div class = "container">
-    <div class = "cart-top-wrap">
-      <div class = "cart-top">
-        <div class = "cart-top-cart cart-top-item">
-          <i class="fa-solid fa-cart-shopping"></i>
-        </div>
-
-        <div class = "cart-top-address cart-top-item">
-          <i class="fa-solid fa-location-dot"></i>
-        </div>
-
-        <div class = "cart-top-payment cart-top-item">
-          <i class="fa-solid fa-money-check"></i>
-        </div>
-
-      </div>
-    </div>
-  </div>
-  <!-- Delivery -->
+  <!------------------------------ Delivery --------------------------------------------------->
   <section class = "delivery">
     <div class = "container">
       <div class = "delivery-top-wrap">
@@ -118,6 +97,7 @@
     </div>
     <div class = "container">
       <div class="delivery" style="display: flex; gap: 20px;">
+        <div class = "delivery-content"></div>
         <!-- Cột trái -->
         <div class="delivery-content-left" style="flex: 1; max-width: 70%;">
           <p>Vui lòng chọn địa chỉ giao hàng</p>
@@ -138,7 +118,7 @@
 
           <div class = "delivery-content-left-input-top row">
             <div class="delivery-content-left-input-top-item">
-              <label for = "">Họ tên<span style="color:red">*</span></label>
+              <label for="">Họ tên<span style="color:red">*</span></label>
               <input type = "text">
             </div>
 
