--- a/template/Untitled-2.html
+++ b/template/Untitled-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chỉnh Sửa Trang Cá Nhân</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="../template/css/style2.css">
 </head>
 <body>
     <div class="container">
