--- a/template/delivery.html
+++ b/template/delivery.html
@@ -65,7 +65,7 @@
     <div class="row justify-content-between">
       <div class="col-lg-5">
         <div class="intro-excerpt">
-          <h1>Cart</h1>
+          <h1>Delivery</h1>
         </div>
       </div>
       <div class="col-lg-7">
