--- a/template/payment.html
+++ b/template/payment.html
@@ -17,7 +17,7 @@
     <meta name="keywords" content="bootstrap, bootstrap4" />
 
     <!-- Bootstrap CSS -->
-    <link rel ="stylesheet" href="css/cart.css">
+    <link rel ="stylesheet" href="css/payment.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="css/tiny-slider.css" rel="stylesheet">
@@ -79,7 +79,7 @@
     <div class = "container">
         <div class = "payment-top-wrap">
             <div class = "payment-top">
-                <div class = "payment-top-payment payment-top-item">
+                <div class = "payment-top-delivery payment-top-item">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </div>
 
@@ -96,52 +96,83 @@
     </div>
 
 
-    <div class = "container">
-        <div class = "payment-content row">
-            <div class = "payment-content-left">
-                <div class = "payment-content-left-method-delivery">
+    <div class="container">
+        <div class="payment-content row">
+
+            <!-- Left section -->
+            <div class="payment-content-left col-md-8">
+                <div class="payment-content-left-method-delivery">
                     <p style="font-weight: bold">Phương thức giao hàng</p>
-                    <div class = "payment-content-left-method-delivery-item">
+                    <div class="payment-content-left-method-delivery-item">
                         <input checked type="radio">
                         <label for="">Giao hàng chuyển phát nhanh</label>
                     </div>
                 </div>
-                <div class = "payment-content-left-method-payment">
+                <div class="payment-content-left-method-payment">
                     <p style="font-weight: bold">Phương thức thanh toán</p>
-                    <p>Mọi giao dịch đều được bảo mật và mã hóa.Thông tin thẻ tín dụng sẽ không bao giờ được lưu lại.</p>
-                    <div class ="payment-content-left-method-payment-item">
+                    <p>Mọi giao dịch đều được bảo mật và mã hóa. Thông tin thẻ tín dụng sẽ không bao giờ được lưu lại.</p>
+
+                    <div class="payment-content-left-method-payment-item">
                         <input name="method-payment" type="radio">
-                        <label for="">Thanh toán bằng thẻ tín dụng(OnePay)</label>
+                        <label for="">Thanh toán bằng thẻ tín dụng (OnePay)</label>
                     </div>
-                    <div class = "payment-content-left-method-payment-item-img">
+                    <div class="payment-content-left-method-payment-item-img">
                         <img src="images/payment/visa.jpg" alt="">
                     </div>
-                    <div class ="payment-content-left-method-payment-item">
+
+                    <div class="payment-content-left-method-payment-item">
                         <input checked name="method-payment" type="radio">
-                        <label for="">Thanh toán bằng thẻ ATM(OnePay)</label>
+                        <label for="">Thanh toán bằng thẻ ATM (OnePay)</label>
                     </div>
-                    <div class = "payment-content-left-method-payment-item-img">
+                    <div class="payment-content-left-method-payment-item-img">
                         <img src="images/payment/visa.jpg" alt="">
                     </div>
-                    <div class ="payment-content-left-method-payment-item">
+
+                    <div class="payment-content-left-method-payment-item">
                         <input name="method-payment" type="radio">
                         <label for="">Thanh toán Momo</label>
                     </div>
-                    <div class = "payment-content-left-method-payment-item-img">
-                        <img src="images/payment/visa.jpg" alt="">
+                    <div class="payment-content-left-method-payment-item-img">
+                        <img src="images/payment/momo.jpg" alt="">
                     </div>
-                    <div class ="payment-content-left-method-payment-item">
+
+                    <div class="payment-content-left-method-payment-item">
                         <input name="method-payment" type="radio">
                         <label for="">Thu tiền tận nơi</label>
                     </div>
-
                 </div>
             </div>
-            <div class = "payment-content-right">
-                
 
+            <!-- Right section -->
+            <div class="payment-content-right col-md-4">
+                <div class="payment-content-right-button">
+                    <input type="text" placeholder="Mã giảm giá/Quà tặng">
+                    <button><i class="fa-solid fa-check"></i></button>
+                </div>
+
+                <div class="payment-content-right-button">
+                    <input type="text" placeholder="Mã cộng tác viên">
+                    <button><i class="fa-solid fa-check"></i></button>
+                </div>
+
+                <div class="payment-content-right-mnv">
+                    <select name="" id="">
+                        <option value="">Chọn mã nhân viên thân thiết</option>
+                        <option>D123</option>
+                        <option>D111</option>
+                        <option>D222</option>
+                        <option>D333</option>
+                        <option>D444</option>
+                    </select>
+                </div>
             </div>
 
+        </div>
+    </div>
+
+
+    <div class = "payment-content-right-payment">
+            <button>TIẾP TỤC THANH TOÁN</button>
         </div>
 
     </div>
