--- a/template/payment.html
+++ b/template/payment.html
@@ -125,7 +125,7 @@
                         <label for="">Thanh toán bằng thẻ ATM (OnePay)</label>
                     </div>
                     <div class="payment-content-left-method-payment-item-img">
-                        <img src="images/payment/visa.jpg" alt="">
+                        <img src="images/payment/atm.jpg" alt="">
                     </div>
 
                     <div class="payment-content-left-method-payment-item">
@@ -165,7 +165,54 @@
                         <option>D444</option>
                     </select>
                 </div>
+
+                <div class = "payment-content-right-bottom">
+                    <table>
+                        <tr>
+                            <th>Tên sản phẩm</th>
+                            <th>Giảm giá</th>
+                            <th>Số lượng</th>
+                            <th>Thành tiền</th>
+                        </tr>
+
+                        <tr>
+                            <td>Quạt hơi nước giá rẻ</td>
+                            <td>-20%</td>
+                            <td>1</td>
+                            <td>500.000<sup>VNĐ</sup></td>
+                        </tr>
+
+                        <tr>
+                            <td>Quạt hơi nước giá đắt</td>
+                            <td>-20%</td>
+                            <td>1</td>
+                            <td>1.000.000<sup>VNĐ</sup></td>
+                        </tr>
+
+                        <tr>
+                            <td style="font-weight: bold" colspan="3">Tổng</td>
+                            <td style="font-weight: bold"><p>1.000.000<sup>VNĐ</sup></p></td>
+
+                        </tr>
+
+                        <tr>
+                            <td style="font-weight: bold" colspan="3">Giao hàng chuyển phát nhanh-Chuyển phát nhanh</td>
+                            <td style="font-weight: bold"><p>38.000<sup>VNĐ</sup></p></td>
+                        </tr>
+
+                        <tr>
+                            <td style="font-weight: bold" colspan="3">Tổng tiền hàng</td>
+                            <td style="font-weight: bold"><p>1.038.000<sup>VNĐ</sup></p></td>
+
+                        </tr>
+
+
+                    </table>
+
+                </div>
+                <div>
             </div>
+
 
         </div>
     </div>
