--- a/template/css/style1.css
+++ b/template/css/style1.css
@@ -43,15 +43,7 @@ label {
     width: 100%;
 }
 
-#avatarPreview{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    overflow: hidden;
-    margin-bottom: 15px;
-    object-fit: cover;
-    
-}
+
 
 input[type="text"], input[type="email"], input[type="password"] {
     padding: 10px;
@@ -90,4 +82,43 @@ button:hover:enabled {
     margin-top: 15px;
     font-size: 14px;
     color: #28a745;
+}
+.avatar-container {
+    position: relative;
+    width: 168px;
+    height: 168px;
+    border-radius: 50%;
+    overflow: hidden;
+    background-color: #e0e0e0; /* Màu nền cho avatar khi không có ảnh */
+}
+
+/* Ảnh đại diện */
+.avatar-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+/* Nút máy ảnh */
+.camera-button {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+}
+
+.camera-button:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
