--- a/template/product.html
+++ b/template/product.html
@@ -65,7 +65,7 @@
         <div class="row justify-content-between">
             <div class="col-lg-5">
                 <div class="intro-excerpt">
-                    <h1>Cart</h1>
+                    <h1>Trang sản phẩm</h1>
                 </div>
             </div>
             <div class="col-lg-7">
@@ -76,32 +76,32 @@
 </div>
 <!-- End Hero Section -->
 <!-----------------Product---------------------->
-<section class = "product">
-    <div class = "container">
-        <div class = "product-top row">
-            <p>Trang chủ</p> <span>&#10230;</span> <p>Nữ</p> <span>&#10230;</span> <p>Hàng mới về</p> <span>&#10230;</span> <p>Quạt hơi nước giá rẻ</p>
-        </div>
-
-        <div class = "product-content">
-            <div class ="product-content-left">
-                <div class = "product-content-left-big-img">
-                    <img src="" alt="">
-                </div>
-                <div class = "product-content-left-small-img">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                </div>
+    <section class = "product">
+        <div class = "container">
+            <div class = "product-top row">
+                <p>Trang chủ</p> <span>&#10230;</span> <p>Nữ</p> <span>&#10230;</span> <p>Hàng mới về</p> <span>&#10230;</span> <p>Quạt hơi nước giá rẻ</p>
             </div>
 
-            <div class = "product-content-right">
+            <div class = "product-content">
+                <div class ="product-content-left">
+                    <div class = "product-content-left-big-img">
+                        <img src="images/bg-img.jpg" alt="">
+                    </div>
+                    <div class = "product-content-left-small-img">
+                        <img src="images/bg-img.jpg" alt="">
+                        <img src="images/bg-img.jpg" alt="">
+                        <img src="images/bg-img.jpg" alt="">
+                        <img src="images/bg-img.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class = "product-content-right">
+                </div>
+
             </div>
-
         </div>
-    </div>
 
-</section>
+    </section>
 
 
 <!-----------------End Product---------------------->
