--- a/template/css/product.css
+++ b/template/css/product.css
@@ -11,10 +11,13 @@
 }
 .product-content-left{
     width: 50%;
+    display: flex;
+    align-items: flex-start;
 }
 .product-content-left-big-img{
     width: 80%;
-    margin-right: 20px;
+    padding-right: 20px;
+
 }
 .product-content-left-big-img img{
     width: 100%;
@@ -26,5 +29,6 @@
     width: 100%;
 }
 .product-content-right{
-    width : 50px;
+    width : 50%;
+    padding-left: 20px;
 }
