--- a/template/contact.html
+++ b/template/contact.html
@@ -233,26 +233,18 @@
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="support.html">Support</a></li>
-									<li><a href="knowledgebase.html">Knowledge base</a></li>
-									<li><a href="livechat.html">Live chat</a></li>
+									<li><a href="support.html">Hỗ trợ</a></li>
+									<li><a href="knowledgebase.html">Kho kiến thức</a></li>
+									<li><a href="livechat.html">Nhắn tin trực tiếp</a></li>
 								</ul>
 							</div>
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="jobs.html">Jobs</a></li>
-									<li><a href="#">Our team</a></li>
-									<li><a href="#">Leadership</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-								</ul>
-							</div>
-
-							<div class="col-6 col-sm-6 col-md-3">
-								<ul class="list-unstyled">
-									<li><a href="#">Nordic Chair</a></li>
-									<li><a href="#">Kruzo Aero</a></li>
-									<li><a href="#">Ergonomic Chair</a></li>
+									<li><a href="jobs.html">Viếc làm</a></li>
+									<li><a href="#">Đội ngũ của chúng tôi</a></li>
+									<li><a href="#">Khả năng lãnh đạo</a></li>
+									<li><a href="#">Chính sách bảo mật</a></li>
 								</ul>
 							</div>
 						</div>
