--- a/template/cart.html
+++ b/template/cart.html
@@ -110,7 +110,7 @@
 							<th class="product-total">Xóa</th>
 						</tr>
 						<tr>
-							<td><img src="images/bag.svg" alt=""></td>
+							<td><img src="https://cdn.tgdd.vn/Products/Images/7498/320996/quat-dieu-hoa-daikiosan-dm102-1-700x467.jpg" alt=""></td>
 							<td><p>Sản phẩm 1</p></td>
 							<td><img src="" alt=""></td>
 							<td><p>500.000<sup>VNĐ</sup></p></td>
@@ -118,8 +118,16 @@
 							<td><span>x</span></td>
 						</tr>
 						<tr>
-							<td><img src="images/bag.svg" alt=""></td>
+							<td><img src="https://cdn.tgdd.vn/Products/Images/7498/324895/quat-dieu-hoa-daikiosan-dm201-1-700x467.jpg" alt=""></td>
 							<td><p>Sản phẩm 2</p></td>
+							<td><img src="" alt=""></td>
+							<td><p>500.000<sup>VNĐ</sup></p></td>
+							<td><input type="number" value="1" min="1"></td>
+							<td><span>x</span></td>
+						</tr>
+						<tr>
+							<td><img src="https://cdn.tgdd.vn/Products/Images/7498/321769/quat-dieu-hoa-kangaroo-kg50f95-1-700x467.jpg" alt=""></td>
+							<td><p>Sản phẩm 1</p></td>
 							<td><img src="" alt=""></td>
 							<td><p>500.000<sup>VNĐ</sup></p></td>
 							<td><input type="number" value="1" min="1"></td>
