--- a/template/css/payment.css
+++ b/template/css/payment.css
@@ -60,7 +60,7 @@
 .payment-content-right-button button{
     height: 30px;
     width: 100px;
-    background-color: black;
+    background-color: #0d6efd;
     color: white;
     border: none;
     cursor: pointer;
@@ -83,13 +83,13 @@
     height: 35px;
     padding: 0 20px;
     font-size: 12px;
-    color: black;
+    color: #0d6efd;
     cursor: pointer;
     transition: all 0.3s ease;
-    border: 2px solid black;
+    border: 2px solid #0d6efd;
 }
 .payment-content-right-payment button:hover{
-    background-color: black;
+    background-color: #86b7fe;
     color: #fff;
 }
 .payment-content-left-method-payment-item-img img{
