--- a/template/shop.html
+++ b/template/shop.html
@@ -68,7 +68,7 @@
 							</div>
 						</div>
 						<div class="col-lg-7">
-							
+
 						</div>
 					</div>
 				</div>
@@ -84,9 +84,9 @@
 		      		<!-- Start Column 1 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
-							<strong class="product-price">$50.00</strong>
+							<img src="https://cdn.tgdd.vn/Products/Images/7498/319779/quat-dieu-hoa-delites-rpd-30-1-700x467.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Quạt điều hòa Delites RPD-30 48W</h3>
+							<strong class="product-price">1.290.000 VNĐ </strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -98,9 +98,9 @@
 					<!-- Start Column 2 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-1.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
-							<strong class="product-price">$50.00</strong>
+							<img src="https://cdn.tgdd.vn/Products/Images/7498/320996/quat-dieu-hoa-daikiosan-dm102-1-700x467.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Quạt điều hoà Daikiosan DM102 110W</h3>
+							<strong class="product-price">2.590.000 VNĐ</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -112,9 +112,9 @@
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-2.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Kruzo Aero Chair</h3>
-							<strong class="product-price">$78.00</strong>
+							<img src="https://cdn.tgdd.vn/Products/Images/7498/320997/quat-dieu-hoa-daikiosan-dm103-0-700x467.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Quạt điều hoà Daikiosan DM103 175W</h3>
+							<strong class="product-price">3.490.000 VNĐ</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -126,9 +126,9 @@
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Ergonomic Chair</h3>
-							<strong class="product-price">$43.00</strong>
+							<img src="https://cdn.tgdd.vn/Products/Images/7498/324895/quat-dieu-hoa-daikiosan-dm201-1-700x467.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Quạt điều hoà Daikiosan DM201 180W</h3>
+							<strong class="product-price">3.90.000 VNĐ</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -141,9 +141,9 @@
 					<!-- Start Column 1 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
-							<strong class="product-price">$50.00</strong>
+							<img src="https://cdn.tgdd.vn/Products/Images/7498/319779/quat-dieu-hoa-delites-rpd-30-1-700x467.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Quạt điều hoà Delites RPD-30 48W</h3>
+							<strong class="product-price">1.290.000</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -155,9 +155,9 @@
 					<!-- Start Column 2 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-1.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
-							<strong class="product-price">$50.00</strong>
+							<img src="https://cdn.tgdd.vn/Products/Images/7498/320996/quat-dieu-hoa-daikiosan-dm102-1-700x467.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Quạt điều hoà Daikiosan DM102 110W</h3>
+							<strong class="product-price">2.590.000</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -169,9 +169,9 @@
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-2.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Kruzo Aero Chair</h3>
-							<strong class="product-price">$78.00</strong>
+							<img src="https://cdn.tgdd.vn/Products/Images/7498/320998/quat-dieu-hoa-daikiosan-dm104-1-700x467.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Quạt điều hoà Daikiosan DM104 300W</h3>
+							<strong class="product-price">6.450.000 VNĐ</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -183,9 +183,9 @@
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Ergonomic Chair</h3>
-							<strong class="product-price">$43.00</strong>
+							<img src="https://cdn.tgdd.vn/Products/Images/7498/321770/quat-dieu-hoa-kangaroo-kg50f99-1-700x467.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Quạt điều hoà Kangaroo KG50F99 165W</h3>
+							<strong class="product-price">3.590.000 VNĐ</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
