--- a/template/css/style.css
+++ b/template/css/style.css
@@ -31,7 +31,7 @@ a {
     font-weight: 600; }
 
 .custom-navbar {
-  background: #2a83e9 !important;
+  background: #3b5d50 !important;
   padding-top: 20px;
   padding-bottom: 20px; }
   .custom-navbar .navbar-brand {
