--- a/template/index.html
+++ b/template/index.html
@@ -26,8 +26,8 @@
 
 	<body>
 		<!-- Start Header/Navigation -->
-		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
-
+		<!-- Start Header/Navigation -->
+		<nav class="custom-navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">Furni<span>.</span></a>
 
@@ -47,14 +47,21 @@
 						<li><a class="nav-link" href="contact.html">Contact us</a></li>
 					</ul>
 
-					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-						<li><a class="nav-link" href="#"><img src="images/user.svg"></a></li>
-						<li><a class="nav-link" href="cart.html"><img src="images/cart.svg"></a></li>
+					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5 align-items-center">
+						<li>
+							<form class="d-flex" role="search">
+								<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+								<button class="btn btn-outline-light" type="submit">Search</button>
+							</form>
+						</li>
+						<li><a class="nav-link" href="#"><img src="images/user.svg" alt="User"></a></li>
+						<li><a class="nav-link" href="cart.html"><img src="images/cart.svg" alt="Cart"></a></li>
 					</ul>
 				</div>
 			</div>
-				
 		</nav>
+		<!-- End Header/Navigation -->
+
 
 
 		<!-- End Header/Navigation -->
